Fix player controls alignment on Windows

--- a/src/renderer/components/PlayerControls/PlayerControls.module.css
+++ b/src/renderer/components/PlayerControls/PlayerControls.module.css
@@ -5,6 +5,7 @@
   position: relative;
 
   .control {
+    display: flex;
     border: 0;
     background: transparent;
     font-size: 16px;
